logs/go_to_poi/build.make.002.log.stderr
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘void poi_callback(const ConstPtr&)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:18:18: error: ‘const struct go_to_poi::poi_<std::allocator<void> >’ has no member named ‘point’; did you mean ‘poi_’?
         x = msg->point;
                  ^~~~~
                  poi_
make[2]: *** [CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o] Error 1
make[1]: *** [CMakeFiles/go_to_poi.dir/all] Error 2
make: *** [all] Error 2
